# proto_test

./: run.sh
protobuf-3.5.0/: collect.sh
protobuf-3.5.0/lib/: libprotobuf-lite.la  libprotobuf-lite.so.15.0.0  libprotobuf.la  libprotoc.la
src/: CMakeLists.txt  main.cc
src/pb1/: CMakeLists.txt  main_pb1.cc  main_pb1.h  pb1.pb.cc  pb1.pb.h  pb1.proto
src/pb2/: CMakeLists.txt  main_pb2.cc  pb2.pb.cc  pb2.pb.h  pb2.proto
src/so1/: CMakeLists.txt  so1.cc
src/so2/: CMakeLists.txt  so2.cc
